# diagflow

./: LICENSE.md  README.md  pyproject.toml  requirements.txt
diagflow/: __init__.py
diagflow.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
diagflow/animation/: __init__.py  animations.py
diagflow/core/: __init__.py  diagram.py  edge.py  node.py
diagflow/export/: __init__.py  html_renderer.py
diagflow/export/templates/: diagram.html.j2  morph.html.j2
diagflow/layout/: __init__.py  auto_layout.py
diagflow/morph/: __init__.py  diff.py  matcher.py  morph_engine.py
diagflow/style/: __init__.py  layouts.py  theme.py
docs/: index.html
docs/examples/: api_flow_output.html  morph_output.html
examples/: api_flow.py  api_flow_output.html  auth_flow.py  auth_flow_output.html  basic.py  basic_output.html  layouts_demo.py  layouts_demo_output.html  morph_example.py  morph_output.html
